# ComputationalGeometry

./: .gitignore
P1/src/: Praktikum1.cpp  line.hpp  point.cpp
P1_roeder/lib/: lines.hpp
P1_roeder/src/: lines.cpp  main.cpp
P1_roeder/test/: AllTests.cpp  ccw_test.cpp  from_file_test.cpp  intersection_test.cpp
P2/doc/: Auswertung.ods  Doku_Aufgabe2.odt
P2/includes/: rapidxml_ns_print.hpp  rapidxml_ns_utils.hpp
P2/lib/: Polygon.hpp  country.hpp  experimental_country.hpp  experimental_polygon.hpp  experimental_state.hpp  line.hpp  parse_cities.hpp  point.hpp  polygon.hpp
P2/src/: Polygon.cpp  Praktikum2.cpp  country.cpp  line.cpp  (+7 more)
P3/: CMakeLists.txt
P3/doc/: Aufgabe3.odt  draw-io_problem1.xml  results.ods  results.txt
P3/lib/: crosspoint.hpp  crosspoints.hpp  event.hpp  eventQueue.hpp  event_queue.hpp  line.hpp  line_sweep.hpp  p3.hpp  point.hpp  sweepLine.hpp  sweep_line_data.hpp
P3/src/: Praktikum3.cpp  crosspoint.cpp  crosspoints.cpp  event.cpp  eventQueue.cpp  event_queue.cpp  line.cpp  line_sweep.cpp  p3.cpp  point.cpp  sweepLine.cpp  sweep_line_data.cpp
P3/test/contrib/gtest/: gtest.h
P3/test/tests/: crosspointTest.cpp  crosspointsTest.cpp  event_test.cpp  lineTest.cpp  p3Test.cpp  sweepLineTest.cpp
P4/: calculateTestData.sh  createTestData.sh
P5/: Doku_Aufgabe5.odt  calculateAndPrintInCircle.m  calculateInCircle.m  plotCircle.m  polygon.m  testpolygon.m  testpolygon.txt  testpolygon2.m  testpolygon2.txt  testpolygon3.m  testpolygon3.txt  testpolygon4.m  testpolygon4.txt
src/: Line.cpp  Line.h  Point.cpp  Point.h  Praktikum1.cpp
(+134 files in other folders)
